chore: change structure link file

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resto ABC</title>
-    <link rel="stylesheet" href="/src/public/output.css" />
+    <link rel="stylesheet" href="output.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Limelight&display=swap" rel="stylesheet" />
   </head>
@@ -12,7 +12,7 @@
     <header id="home">
       <div class="relative w-full h-screen">
         <div class="absolute z-10 mt-0 w-full h-screen flex items-center overflow-hidden">
-          <img src="/src/public/img/jumbotron.jpg" fill class="object-cover w-full h-full brightness-35" />
+          <img src="img/jumbotron.jpg" fill class="object-cover w-full h-full brightness-35" />
         </div>
         <div class="fixed z-50 w-full h-max flex justify-between px-5 py-2.5 items-center bg-white/90 sm:hidden">
           <a href="#home" class="font-bold text-2xl text-green-400">Resto ABC</a>
@@ -67,8 +67,8 @@
     <section id="tentang" class="pt-32 sm:px-10 lg:px-20 xl:px-40">
       <div class="grid w-full h-max lg:grid-cols-2">
         <div class="grid p-5 w-full gap-5 sm:grid-cols-2">
-          <img src="/src/public/img/homeResto.jpg" class="w-full h-96 object-cover rounded-xl" />
-          <img src="/src/public/img/homeResto2.jpg" class="w-full h-96 object-cover rounded-xl" />
+          <img src="img/homeResto.jpg" class="w-full h-96 object-cover rounded-xl" />
+          <img src="img/homeResto2.jpg" class="w-full h-96 object-cover rounded-xl" />
         </div>
         <div class="flex flex-col gap-2.5 p-5">
           <h1 class="font-bold text-3xl text-green-400 lg:text-4xl">
@@ -384,19 +384,19 @@
     <section class="pt-32 sm:px-10 lg:px-20 xl:px-40">
       <div class="w-full grid gap-5 p-5 sm:grid-cols-2 lg:grid-cols-4">
         <div class="w-full flex flex-col gap-2.5 rounded-lg overflow-hidden">
-          <img src="/src/public/img/homeResto.jpg" alt="resto1" class="object-cover w-full h-96" />
+          <img src="img/homeResto.jpg" alt="resto1" class="object-cover w-full h-96" />
           <h4 class="text-xl text-gray-700 font-bold">Medan</h4>
         </div>
         <div class="w-full flex flex-col gap-2.5 rounded-lg overflow-hidden">
-          <img src="/src/public/img/homeRestoB.jpg" alt="resto1" class="object-cover w-full h-96" />
+          <img src="img/homeRestoB.jpg" alt="resto1" class="object-cover w-full h-96" />
           <h4 class="text-xl text-gray-700 font-bold">Pekanbaru</h4>
         </div>
         <div class="w-full flex flex-col gap-2.5 rounded-lg overflow-hidden">
-          <img src="/src/public/img/homeRestoC.png" alt="resto1" class="object-cover w-full h-96" />
+          <img src="img/homeRestoC.png" alt="resto1" class="object-cover w-full h-96" />
           <h4 class="text-xl text-gray-700 font-bold">Lampung</h4>
         </div>
         <div class="w-full flex flex-col gap-2.5 rounded-lg overflow-hidden">
-          <img src="/src/public/img/homeRestoD.jpg" alt="resto1" class="object-cover w-full h-96" />
+          <img src="img/homeRestoD.jpg" alt="resto1" class="object-cover w-full h-96" />
           <h4 class="text-xl text-gray-700 font-bold">Jakarta</h4>
         </div>
       </div>
